--- a/formuláriorafaballerini.html
+++ b/formuláriorafaballerini.html
@@ -71,10 +71,10 @@
             <div class="campo">
                 <br>
                 <label for=""><strong>Conte um pouco da sua experiência:</strong></label>
-                <textarea style="width: 26em;" name="experiência" id="experiência" row="6"></textarea>
+                <textarea style="width: 26em;" name="experiencia" id="experiencia" row="6"></textarea>
             </div>
 
-            <button class="botão" type="submit">Concluído</button>
+            <button class="botao" type="submit">Concluído</button>
                
     </form>
 </body>
